--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
+### Maven ###
 target/
 pom.xml.tag
 pom.xml.releaseBackup
